--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 <script src="https://cdn.tiny.cloud/1/wt5rkmgimgwn43tf9f6glmxs7ybeega6ebcz7emqmxb8gmth/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+<script src="https://unpkg.com/htmx.org@1.9.2"></script>
   <!-- Default CSS -->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="stylesheet" href="{% static 'chat/style.css' %}">
