--- a/templates/registration/acc_active_email.html
+++ b/templates/registration/acc_active_email.html
@@ -1,12 +1,10 @@
 {% autoescape off %}  {# Turn off autoescaping for the link #}
-Hi {{ user.username }},
+<p>Hi {{ user.username }},</p>
+<p>Thank you for registering with Atlas Competition. To activate your account, click the link below:</p>
+<p><a href="{{ activation_url }}">Activate your account</a></p>
 
-Please click on the link below to confirm your registration:
-
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
-
-If you did not request this, please ignore this email.
+    <p>If you did not request this, please ignore this email.</p>
 
 Thanks,
-The Strength Platform Team
+The Atlas Competition Team
 {% endautoescape %}
