--- a/templates/registration/acc_active_email.html
+++ b/templates/registration/acc_active_email.html
@@ -1,9 +1,9 @@
 {% autoescape off %}  {# Turn off autoescaping for the link #}
-<p>Hi {{ user.username }},</p>
-<p>Thank you for registering with Atlas Competition. To activate your account, click the link below:</p>
-<p><a href="{{ activation_url }}">Activate your account</a></p>
+Hi {{ user.username }},
+Thank you for registering with Atlas Competition. To activate your account, click the link below:
+Click here: {{ activation_url }}
 
-    <p>If you did not request this, please ignore this email.</p>
+If you did not request this, please ignore this email.
 
 Thanks,
 The Atlas Competition Team
