--- a/templates/competitions/manage_competition.html
+++ b/templates/competitions/manage_competition.html
@@ -156,7 +156,7 @@
                     </div>
                     <div class="col-md-3 mb-3">
                         <h5 class="text-muted">Location</h5>
-                        <p class="fw-bold">{{ competition.city }}, {{ competition.state|default:"TBD" }}</p>
+                        <p class="fw-bold">{{ competition.city|capfirst }}, {{ competition.state|default:"TBD" }}</p>
                     </div>
                     <div class="col-md-3 mb-3">
                         <h5 class="text-muted">Admin Status</h5>
