--- a/templates/competitions/api_guide.html
+++ b/templates/competitions/api_guide.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container py-5">
   <div class="text-center mb-5">
-    <img src="/static/images/logoapi.jpeg" alt="Atlas Competition Logo" style="height: 150px;">
+    <img src="/static/images/logoapi.jpeg" alt="Atlas Competition Logo" style="width: 50%;">
     <p class="lead text-muted">A quick reference for pulling athlete and competition data via the Atlas API</p>
   </div>
 
